# tocoreml-extractor

./: .gitignore  CLAUDE.md  README.md  llama_coreml_converter.py  llama_coreml_converter_int4.py  llama_coreml_converter_int8.py  llama_coreml_inference.py  pyproject.toml  quantize_existing_model.py  requirements.txt
